--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             joinButton.addEventListener('click', () => {
                 if (!isSubscribed) {
                     // Перенаправляем на канал Telegram
-                    window.location.href = 'https://t.me/your_channel_link'; // Замените на ваш канал
+                    window.location.href = 'https://t.me/starsmajor'; // Замените на ваш канал
                 } else {
                     // Добавляем 500 монет на баланс
                     coinCount += 500;
