--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       user-select: none;
       touch-action: none;
       overflow: hidden;
-      background-image: url('background.png'); /* Замените на URL вашего изображения */
+      background-image: url('background_img.png'); /* Замените на URL вашего изображения */
       background-size: 100% 100%; /* Растягивает фон на весь экран */
       background-position: center; /* Центрирование фона */
       background-repeat: no-repeat; /* Отключение повторения фона */
